--- a/styles/style.css
+++ b/styles/style.css
@@ -4,12 +4,23 @@
   box-sizing: border-box;
 }
 
+.visually-hidden {
+  position: absolute;
+  inline-size: 1px;
+  block-size: 1px;
+  overflow: hidden;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  white-space: nowrap;
+}
+
 html {
   block-size: 100%;
 }
 
 .page {
   inline-size: 1200px;
+  min-height: 800px;
   block-size: 100%;
   margin: auto;
   color: #fff;
@@ -36,3 +47,257 @@ ul,
 ol {
   list-style: none;
 }
+
+/*Блок с видео*/
+
+.content {
+  margin: auto;
+  height: 100%;
+  padding: 133px 30px;
+  display: flex;
+  justify-content: space-between;
+  align-items: end;
+}
+
+.result {
+  min-width: 711px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  min-height: 456px;
+}
+
+.result__video-container {
+  width: 100%;
+  height: 386px;
+  position: relative;
+}
+
+.result__video {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+}
+
+.search-form {
+  display: flex;
+  justify-content: space-between;
+  align-items: end;
+}
+
+.search-form__fieldset {
+  border: 0;
+}
+
+.search-form__fieldset-title {
+  font-size: inherit;
+  font-weight: normal;
+  text-align: left;
+  padding-bottom: 5px;
+}
+
+.search-form__label {
+  display: flex;
+  width: fit-content;
+  align-items: center;
+}
+
+.search-form__checkbox-list .search-form__label:hover {
+  text-decoration: underline;
+  text-underline-offset: 3px;
+}
+
+.search-form__label:has(:focus-visible) {
+  outline: 1px solid #fff;
+  outline-offset: 2px;
+}
+
+.search-form__textfield {
+  color: inherit;
+  width: 225px;
+  appearance: none;
+  background-color: transparent;
+  border: 0;
+  border-top: 1px solid #fff;
+  border-bottom: 1px solid #fff;
+  font-family: inherit;
+  font-weight: 400;
+  font-size: inherit;
+  cursor: text;
+}
+
+.search-form__textfield:focus {
+  outline: none;
+}
+
+input:focus {
+  outline: none;
+}
+
+input::placeholder {
+  font-family: inherit;
+  font-weight: 400;
+  color: rgb(255, 255, 255, 0.7)
+}
+
+.search-form__checkbox-list {
+  display: flex;
+  grid-row: 15px;
+  width: 212px;
+  justify-content: space-between;
+}
+
+.search-form__pseudo-checkbox {
+  display: block;
+  width: 19px;
+  height: 19px;
+  border: 1px solid #fff;
+  margin-right: 5px;
+  padding: 1px;
+}
+
+input[type='checkbox']:checked + .search-form__pseudo-checkbox::before {
+  content: '';
+  display: block;
+  width: 15px;
+  height: 15px;
+  background-color: #fff;
+}
+
+.button {
+  background-color: transparent;
+  font-family: 'Fira Sans Condensed', sans-serif;
+  font-weight: 700;
+  font-size: 18px;
+  color: #fff;
+  line-height: 1.2;
+  text-align: center;
+  border: 1px solid #fff;
+  cursor: pointer;
+}
+
+.button:active {
+  background-color: #545050;
+}
+
+.button:hover {
+  text-decoration: underline;
+}
+
+.button:focus {
+  outline: none;
+}
+
+.button:focus-visible  {
+  outline: 1px solid #fff;
+  outline-offset: 2px;
+}
+
+.search-form__submit-button {
+  width: 194px;
+  height: 34px;
+}
+
+/*Блок с выбором города*/
+
+.content__details {
+  max-width: 399px;
+}
+
+.title {
+  font-family: 'Oswald', sans-serif;
+  font-weight: 700;
+  font-size: 75px;
+  text-transform: uppercase;
+  line-height: 0.94;
+  padding-bottom: 26px;
+}
+
+.content__accent {
+  color: #545050;
+}
+
+.content__list {
+  height: 298px;
+  overflow-y: scroll;
+  position: relative;
+}
+
+.content__list-item:not(:last-child) {
+  margin-bottom: 30px;
+}
+
+.content__card-link {
+  display: block;
+  cursor: pointer;
+  text-decoration: none;
+  color: #fff;
+  margin: 2px;
+}
+
+.content__card-link_current {
+  background-color: #545050;
+}
+
+.content__video-card {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  height: 103px;
+  padding: 2px 0 4px 2px;
+}
+
+.content__video-card:active {
+  background-color: #545050
+}
+
+.content__card-link:focus {
+  outline: none;
+}
+
+.content__card-link:focus-visible {
+  outline: 1px solid #fff;
+  outline-offset: 2px;
+}
+
+.content__video-card-description-container {
+  flex-grow: 1;
+  word-wrap: break-word;
+}
+
+.content__video-card-description-container:hover {
+  text-decoration: underline;
+  text-underline-offset: 3px;
+  text-underline-position: unset;
+}
+
+.content__video-card-title {
+  text-transform: uppercase;
+  font-family: 'Oswald', sans-serif;
+  font-weight: 400;
+  font-size: 30px;
+  line-height: 1;
+  margin-bottom: 6px;
+}
+
+.content__video-card-description {
+  font-weight: 400;
+  line-height: 0.9;
+}
+
+.content__video-card-thumbnail {
+  width: 194px;
+  height: 100%;
+  object-fit: cover;
+}
+
+.more-button {
+  width: 100%;
+  height: 34px;
+  padding: 6px 0;
+  margin-bottom: 1px;
+}
+
+
+
