--- a/styles/style.css
+++ b/styles/style.css
@@ -23,7 +23,7 @@ html {
   block-size: 100%;
   margin: auto;
   color: #fff;
-  font-family: 'Fira Sans Condensed', sans-serif;
+  font-family: 'Fira Sans Condensed', 'Arial', sans-serif;
   font-size: 18px;
   background-color: #1b1919;
   display: flex;
@@ -61,22 +61,22 @@ ol {
 }
 
 .result {
-  min-width: 711px;
+  inline-size: 711px;
+  block-size: 456px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  min-height: 456px;
 }
 
 .result__video-container {
-  width: 100%;
-  height: 386px;
+  inline-size: 711px;
+  block-size: 386px;
   position: relative;
 }
 
 .result__video {
-  width: 100%;
-  height: 100%;
+  inline-size: 100%;
+  block-size: 100%;
   object-fit: cover;
   object-position: center;
 }
@@ -85,23 +85,26 @@ ol {
   display: flex;
   justify-content: space-between;
   align-items: end;
+  margin-block-end: 3px;
 }
 
 .search-form__fieldset {
-  border: 0;
+  border: none;
 }
 
 .search-form__fieldset-title {
   font-size: inherit;
   font-weight: normal;
-  text-align: left;
-  padding-bottom: 5px;
+  text-align: start;
+  margin-block-end: 5px;
+  cursor: default;
 }
 
 .search-form__label {
   display: flex;
-  width: fit-content;
+  inline-size: fit-content;
   align-items: center;
+  cursor: pointer;
 }
 
 .search-form__checkbox-list .search-form__label:hover {
@@ -116,27 +119,35 @@ ol {
 
 .search-form__textfield {
   color: inherit;
-  width: 225px;
+  inline-size: 225px;
   appearance: none;
   background-color: transparent;
-  border: 0;
-  border-top: 1px solid #fff;
-  border-bottom: 1px solid #fff;
+  border: none;
+  padding-inline: 0;
+  border-block-start: 1px solid #fff;
+  border-block-end: 1px solid #fff;
   font-family: inherit;
   font-weight: 400;
   font-size: inherit;
+}
+
+.search-form__textfield:hover {
   cursor: text;
+}
+
+.search-form__textfield:active {
+  border: 1px solid #fff;
 }
 
 .search-form__textfield:focus {
   outline: none;
 }
 
-input:focus {
+.search-form__textfield:focus {
   outline: none;
 }
 
-input::placeholder {
+.search-form__textfield::placeholder {
   font-family: inherit;
   font-weight: 400;
   color: rgb(255, 255, 255, 0.7)
@@ -144,31 +155,31 @@ input::placeholder {
 
 .search-form__checkbox-list {
   display: flex;
-  grid-row: 15px;
-  width: 212px;
+  inline-size: 212px;
   justify-content: space-between;
 }
 
 .search-form__pseudo-checkbox {
   display: block;
-  width: 19px;
-  height: 19px;
+  inline-size: 19px;
+  block-size: 19px;
   border: 1px solid #fff;
-  margin-right: 5px;
+  margin-inline-end: 5px;
   padding: 1px;
 }
 
-input[type='checkbox']:checked + .search-form__pseudo-checkbox::before {
+.search-form__checkbox:checked + .search-form__pseudo-checkbox::before {
   content: '';
   display: block;
-  width: 15px;
-  height: 15px;
+  inline-size: 15px;
+  block-size: 15px;
   background-color: #fff;
 }
 
 .button {
   background-color: transparent;
-  font-family: 'Fira Sans Condensed', sans-serif;
+  appearance: none;
+  font-family: 'Fira Sans Condensed', 'Arial', sans-serif;
   font-weight: 700;
   font-size: 18px;
   color: #fff;
@@ -176,6 +187,7 @@ input[type='checkbox']:checked + .search-form__pseudo-checkbox::before {
   text-align: center;
   border: 1px solid #fff;
   cursor: pointer;
+  block-size: 34px;
 }
 
 .button:active {
@@ -196,23 +208,23 @@ input[type='checkbox']:checked + .search-form__pseudo-checkbox::before {
 }
 
 .search-form__submit-button {
-  width: 194px;
-  height: 34px;
+  inline-size: 194px;
 }
 
 /*Блок с выбором города*/
 
 .content__details {
-  max-width: 399px;
+  max-inline-size: 399px;
 }
 
 .title {
-  font-family: 'Oswald', sans-serif;
+  font-family: 'Oswald', 'Arial',sans-serif;
   font-weight: 700;
   font-size: 75px;
   text-transform: uppercase;
-  line-height: 0.93;
-  padding-bottom: 26px;
+  line-height: 0.94;
+  padding-block-end: 26px;
+  cursor: default;
 }
 
 .content__accent {
@@ -220,13 +232,13 @@ input[type='checkbox']:checked + .search-form__pseudo-checkbox::before {
 }
 
 .content__list {
-  height: 298px;
-  overflow-y: scroll;
+  block-size: 298px;
+  overflow-y: auto;
   position: relative;
 }
 
 .content__list-item:not(:last-child) {
-  margin-bottom: 30px;
+  margin-block-end: 30px;
 }
 
 .content__card-link {
@@ -237,20 +249,14 @@ input[type='checkbox']:checked + .search-form__pseudo-checkbox::before {
   margin: 2px;
 }
 
-.content__card-link_current {
+.content__card-link:active {
   background-color: #545050;
 }
 
-.content__video-card {
-  display: flex;
-  width: 100%;
-  justify-content: space-between;
-  height: 103px;
-  padding: 2px 0 4px 2px;
-}
-
-.content__video-card:active {
-  background-color: #545050
+.content__card-link:hover {
+  text-decoration: underline;
+  text-underline-offset: 3px;
+  text-underline-position: unset;
 }
 
 .content__card-link:focus {
@@ -259,45 +265,56 @@ input[type='checkbox']:checked + .search-form__pseudo-checkbox::before {
 
 .content__card-link:focus-visible {
   outline: 1px solid #fff;
-  outline-offset: 2px;
+}
+
+.content__card-link_current {
+  background-color: #545050;
+}
+
+.content__video-card {
+  display: flex;
+  inline-size: 100%;
+  justify-content: space-between;
+  block-size: 107px;
+  padding: 2px 0 4px 2px;
 }
 
 .content__video-card-description-container {
   flex-grow: 1;
-  word-wrap: break-word;
-}
-
-.content__video-card-description-container:hover {
-  text-decoration: underline;
-  text-underline-offset: 3px;
-  text-underline-position: unset;
+  overflow: hidden;
 }
 
 .content__video-card-title {
   text-transform: uppercase;
-  font-family: 'Oswald', sans-serif;
-  font-weight: 400;
+  font-family: 'Oswald', 'Arial',sans-serif;
+  font-weight: 700;
   font-size: 30px;
   line-height: 1;
-  margin-bottom: 6px;
+  padding-block-end: 6px;
+  display: block;
+  max-inline-size: 200px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 .content__video-card-description {
   font-weight: 400;
   line-height: 0.9;
+  display: block;
 }
 
 .content__video-card-thumbnail {
-  width: 194px;
-  height: 100%;
+  min-inline-size: 194px;
+  block-size: 103px;
   object-fit: cover;
+  object-position: center;
 }
 
 .more-button {
-  width: 100%;
-  height: 34px;
+  inline-size: calc(100% - 6px);
   padding: 6px 0;
-  margin-bottom: 1px;
+  margin: 0 3px 3px;
 }
 
 
