--- a/styles/style.css
+++ b/styles/style.css
@@ -97,7 +97,6 @@ ol {
   font-weight: normal;
   text-align: start;
   margin-block-end: 5px;
-  cursor: default;
 }
 
 .search-form__label {
@@ -129,6 +128,7 @@ ol {
   font-family: inherit;
   font-weight: 400;
   font-size: inherit;
+  cursor: pointer;
 }
 
 .search-form__textfield:hover {
@@ -137,10 +137,6 @@ ol {
 
 .search-form__textfield:active {
   border: 1px solid #fff;
-}
-
-.search-form__textfield:focus {
-  outline: none;
 }
 
 .search-form__textfield:focus {
@@ -224,7 +220,6 @@ ol {
   text-transform: uppercase;
   line-height: 0.94;
   padding-block-end: 26px;
-  cursor: default;
 }
 
 .content__accent {
@@ -255,7 +250,6 @@ ol {
 
 .content__card-link:hover {
   text-decoration: underline;
-  text-underline-offset: 3px;
   text-underline-position: unset;
 }
 
@@ -272,15 +266,16 @@ ol {
 }
 
 .content__video-card {
-  display: flex;
+  display: grid;
+  grid-template-columns: 1fr 194px;
+  column-gap: 3px;
   inline-size: 100%;
   justify-content: space-between;
   block-size: 107px;
-  padding: 2px 0 4px 2px;
+  padding: 2px 3px 4px 2px;
 }
 
 .content__video-card-description-container {
-  flex-grow: 1;
   overflow: hidden;
 }
 
@@ -290,8 +285,7 @@ ol {
   font-weight: 700;
   font-size: 30px;
   line-height: 1;
-  padding-block-end: 6px;
-  display: block;
+  margin-block-end: 6px;
   max-inline-size: 200px;
   text-overflow: ellipsis;
   white-space: nowrap;
@@ -301,11 +295,14 @@ ol {
 .content__video-card-description {
   font-weight: 400;
   line-height: 0.9;
-  display: block;
+  max-inline-size: 200px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 .content__video-card-thumbnail {
-  min-inline-size: 194px;
+  inline-size: 194px;
   block-size: 103px;
   object-fit: cover;
   object-position: center;
